force-app/main/default/objects/Car__c/Car__c.object-meta.xml
<CustomObject>
    <description>Created as per the Assesment from 221 B Baker ST</description>
    <label>Car</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>