force-app/main/default/objects/Car__c/fields/Car_Category__c.field-meta.xml
<CustomField>
    <fullName>Car_Category__c</fullName>
    <label>Car Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mini</fullName>
            </value>
            <value>
                <fullName>Supermini</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>