force-app/main/default/objects/Car__c/validationRules/Refuse_Color.validationRule-meta.xml
<ValidationRule>
    <fullName>Refuse_Color</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(Color__c,&quot;&quot;))</errorConditionFormula>
    <errorMessage>It will be impossible to select grey color.</errorMessage>
</ValidationRule>